fix uneven paddings

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -142,7 +142,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 3rem;
   justify-items: center;
-  max-width: 1345px;
+  max-width: 1525px;
 }
 
 /* large */
